tests/NormalTests/paczka1/fuzzy1/50791906.err
Error in line 1: CbQplP S56 74,4
Error in line 3: 93Slhk3rH S73 54,6
Error in line 6: 93Slhk3rH S56 49,5
Error in line 10: 5zFm S902 121,83
Error in line 7: 5zFm S902 27,2
Error in line 26: fE4oSup S73 -2,1
Error in line 25: CbQplP S56 25,9
Error in line 36: 5zFm A390 89,0
